deploy/openshift/apps/deploy-console.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frdemo-console
  labels:
    app: frdemo-console
    app.kubernetes.io/component: frdemo-console
    app.kubernetes.io/instance: frdemo-console
    app.kubernetes.io/name: frdemo-console
    app.kubernetes.io/part-of: strimzi-frdemo
    app.openshift.io/runtime-namespace: erdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frdemo-console
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frdemo-console
        deployment: frdemo-console
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: frdemo-console
          image: >-
            image-registry.openshift-image-registry.svc:5000/erdemo/frdemo-console@sha256:49f412a7030fcdae5b6e89bc98b42138fac6c700de98d122e5ab9ef6c24407ae
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
kind: Service
apiVersion: v1
metadata:
  name: frdemo-console
  labels:
    app: frdemo-console
    app.kubernetes.io/component: frdemo-console
    app.kubernetes.io/instance: frdemo-console
    app.kubernetes.io/name: frdemo-console
    app.kubernetes.io/part-of: strimzi-frdemo
    app.openshift.io/runtime-version: latest
spec:
  clusterIP: 172.30.50.4
  ipFamilies:
    - IPv4
  ports:
    - name: 4200-tcp
      protocol: TCP
      port: 4200
      targetPort: 4200
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frdemo-console
    deployment: frdemo-console

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frdemo-console
  labels:
    app: frdemo-console
    app.kubernetes.io/component: frdemo-console
    app.kubernetes.io/instance: frdemo-console
    app.kubernetes.io/name: frdemo-console
    app.kubernetes.io/part-of: strimzi-frdemo
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: frdemo-console
    weight: 100
  port:
    targetPort: 4200-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
